<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_mask" >

    <RelativeLayout
        android:layout_width="@dimen/about_dialog_width"
        android:layout_height="@dimen/about_dialog_height"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/toast_bg" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/about_dialog_layout_marginTop"
            android:text="@string/about"
            android:textColor="@color/text_white"
            android:textSize="@dimen/textsize_biger" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/screen_line" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerVertical="true"
            android:layout_marginTop="44dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="200dp"
                android:src="@drawable/ic_screen_new" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/imageView2"
                android:text="@string/official_website"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerVertical="true"
            android:layout_marginTop="24dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="200dp"
                android:src="@drawable/ic_weibo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/imageView2"
                android:text="@string/weibo"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout2"
            android:layout_centerVertical="true"
            android:layout_marginTop="24dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="200dp"
                android:src="@drawable/ic_qq" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/imageView2"
                android:text="@string/qq"
                android:textSize="30sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_off"
            android:layout_width="@dimen/main_btn_modifyname_width"
            android:layout_height="@dimen/main_btn_modifyname_height"
            android:layout_below="@+id/relativeLayout3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_select_bg"
            android:text="@string/off"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/textsize_small" />
    </RelativeLayout>

</RelativeLayout>