<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_full_dark"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/download"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/progressbar_download"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:focusable="false"
            android:max="100"
            android:maxHeight="4dip"
            android:minHeight="4dip"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:progressDrawable="@drawable/install_seekbar"
            android:thumb="@drawable/progress" />

        <TextView
            android:id="@+id/progress_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/progressbar_download"
            android:layout_below="@id/progressbar_download"
            android:layout_marginTop="0dp"
            android:textColor="#999999"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/install"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="true"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressbar_install"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:indeterminate="false"
            android:indeterminateDrawable="@drawable/install_progressbar" />

        <TextView
            android:id="@+id/progress_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressbar_install"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/install"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/installed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="true"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/title_installed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/description_installed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_installed"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/find"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>